cloud/cscart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cscart
  labels:
    app: cscart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cscart
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cscart
    spec:
      containers:
        - image: cscart
          imagePullPolicy: IfNotPresent
          name: cscart
          ports:
            - containerPort: 80
              name: cscart
          volumeMounts:
            - name: cscart
              mountPath: /var/www/cscart/images
            - name: cscart
              mountPath: /var/www/cscart/var/files
      volumes:
        - name: cscart
          persistentVolumeClaim:
            claimName: cscart-pv-claim
