cloud/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  labels:
    app: mariadb
spec:
  selector:
    matchLabels:
      app: mariadb
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mariadb
        tier: backend
    spec:
      containers:
        - image: library/mariadb:10
          name: mariadb
          ports:
            - containerPort: 3306
              name: mariadb
          livenessProbe:
            tcpSocket:
              port: 3306
          volumeMounts:
            - name: mariadb
              mountPath: /var/lib/mariadb
      volumes:
        - name: mariadb
          persistentVolumeClaim:
            claimName: mariadb-pv-claim
