cloud/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
      tier: backend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
        tier: backend
    spec:
      containers:
        - image: redis:6.0-alpine
          name: redis
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - name: redis
              mountPath: /data
      volumes:
        - name: redis
          persistentVolumeClaim:
            claimName: redis-pv-claim
