cloud/cscart-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cscart-svc
  labels:
    app: cscart
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: cscart
