cloud/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: cscart-reverse-proxy
spec:
  tls:
    - hosts:
        - foo.bar.com
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for foo.bar.com
      secretName: tls-secret
  rules:
    - host: foo.bar.com
      http:
        paths:
          - path: /
            backend:
              # This assumes http-svc exists and routes to healthy endpoints
              serviceName: http-svc
              servicePort: 80
